Refine styles with updated gradients, shadows, and text colors; add new CSS variables for enhanced design consistency and flexibility.

--- a/index.html
+++ b/index.html
@@ -496,25 +496,25 @@
         <div class="flex flex-col md:flex-row-reverse items-start gap-20">
           <div class="md:w-1/3 flex-shrink-0">
             <h3 class="text-3xl md:text-4xl font-light dark:text-slate-100 mb-6 tracking-tight">
-              <span class="text-transparent bg-clip-text bg-gradient-to-r from-white via-white to-amber-400">Aplicaciones Web y Sistemas</span>
+              <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-amber-400 drop-shadow-md">Aplicaciones Web y Sistemas</span>
             </h3>
 
-            <p class="text-white dark:text-slate-300/60 font-light text-base leading-relaxed">
+            <p class="text-base-content dark:text-slate-300/60 leading-relaxed">
               Creamos plataformas de gestión, microservicios, dashboards, gestores de contenido personalizado,
               APIs robustas y más. Nuestra experiencia abarca desde startups hasta sistemas a gran escala.
             </p>
           </div>
 
           <div
-            class="md:w-2/3 bg-slate-900/90 backdrop-blur-sm rounded-xl p-12 border border-slate-700/5 transition-all duration-300 hover:border-slate-400/10">
+            class="md:w-2/3 bg-sky-50 dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-12 shadow-inner shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
               <div>
-                <h4 class="text-xl md:text-2xl font-light text-white mb-6 tracking-tight">Desarrollo Full-Stack</h4>
-                <p class="text-white dark:text-slate-300/60 font-light mb-8 text-base">
+                <h4 class="text-xl md:text-2xl font-light text-base mb-6 tracking-tight">Desarrollo Full-Stack</h4>
+                <p class="text-slate-600 dark:text-slate-300 font-light mb-8 text-base">
                   Desarrollamos sistemas que impulsan la gestión y sus operaciones
                 </p>
 
-                <ul class="text-white dark:text-slate-300/50 space-y-5 font-light text-sm">
+                <ul class="text-slate-600 dark:text-slate-300 space-y-5 font-light text-sm">
                   <li class="flex items-center">
                     <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
                     <span>Arquitectura y Desarrollo</span>
@@ -531,12 +531,12 @@
               </div>
 
               <div>
-                <h4 class="text-xl md:text-2xl font-light text-white mb-6 tracking-tight">Arquitectura de Sistemas</h4>
-                <p class="text-white dark:text-slate-300/60 font-light mb-8 text-base">
+                <h4 class="text-xl md:text-2xl font-light text-base mb-6 tracking-tight">Arquitectura de Sistemas</h4>
+                <p class="text-slate-600 dark:text-slate-300 font-light mb-8 text-base">
                   Estamos capacitados para entender y evolucionar la tecnología de su negocio.
                 </p>
 
-                <ul class="text-white dark:text-slate-300/50 space-y-5 font-light text-sm">
+                <ul class="text-slate-600 dark:text-slate-300 space-y-5 font-light text-sm">
                   <li class="flex items-center">
                     <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
                     <span>Modelamiento de datos</span>
@@ -561,10 +561,10 @@
         <div class="flex flex-col md:flex-row items-start gap-20">
           <div class="md:w-1/3 flex-shrink-0">
             <h3 class="text-3xl md:text-4xl font-light dark:text-slate-100 mb-6 tracking-tight">
-              <span class="text-transparent bg-clip-text bg-gradient-to-r from-white via-white to-amber-400">Consultorías y Servicios</span>
+              <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-amber-400 drop-shadow-md">Consultorías y Servicios</span>
             </h3>
 
-            <p class="text-white dark:text-slate-300/60 font-light text-base leading-relaxed">
+            <p class="text-base-content dark:text-slate-300/60 leading-relaxed">
               Le ayudamos a definir la mejor estrategia tecnológica para su proyecto. Aportamos más de 15 años de
               experiencia
               en diferentes industrias para asegurar que su inversión sea sólida y escalable.
@@ -572,51 +572,51 @@
           </div>
 
           <div
-            class="md:w-2/3 bg-slate-800/30 backdrop-blur-sm rounded-xl p-12 border border-slate-700/5 transition-all duration-300 hover:border-amber-400/10">
+            class="md:w-2/3 bg-sky-50 dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-12 shadow-inner shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
               <div>
-                <h4 class="text-xl md:text-2xl font-light text-white mb-6 tracking-tight">Asesoría y Arquitectura de
+                <h4 class="text-xl md:text-2xl font-light text-base mb-6 tracking-tight">Asesoría y Arquitectura de
                   Soluciones</h4>
-                <p class="text-white dark:text-slate-300/60 font-light mb-8 text-base">
+                <p class="text-slate-600 dark:text-slate-300 font-light mb-8 text-base">
                   Le guiamos para tomar las decisiones tecnológicas correctas, asegurando la factibilidad de su
                   proyecto.
                 </p>
 
-                <ul class="text-white dark:text-slate-300/50 space-y-5 font-light text-sm">
+                <ul class="text-slate-600 dark:text-slate-300 space-y-5 font-light text-sm">
                   <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-amber-400/40 mr-3"></span>
+                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
                     <span>Evaluación de tecnologías</span>
                   </li>
                   <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-amber-400/40 mr-3"></span>
+                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
                     <span>Diseño de arquitectura</span>
                   </li>
                   <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-amber-400/40 mr-3"></span>
+                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
                     <span>Planificación estratégica</span>
                   </li>
                 </ul>
               </div>
 
               <div>
-                <h4 class="text-xl md:text-2xl font-light text-white mb-6 tracking-tight">Despliegue y Soporte
+                <h4 class="text-xl md:text-2xl font-light text-base mb-6 tracking-tight">Despliegue y Soporte
                   Experto</h4>
-                <p class="text-white dark:text-slate-300/60 font-light mb-8 text-base">
+                <p class="text-slate-600 dark:text-slate-300 font-light mb-8 text-base">
                   Integramos la gestión de servidores privados, VPS y servicios Cloud con operación y
                   soporte técnico directo, sin intermediarios.
                 </p>
 
-                <ul class="text-white dark:text-slate-300/50 space-y-5 font-light text-sm">
+                <ul class="text-slate-600 dark:text-slate-300 space-y-5 font-light text-sm">
                   <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-amber-400/40 mr-3"></span>
+                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
                     <span>Alojamiento web y correo corporativo</span>
                   </li>
                   <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-amber-400/40 mr-3"></span>
+                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
                     <span>Amazon Web Services</span>
                   </li>
                   <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-amber-400/40 mr-3"></span>
+                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
                     <span>VPS FreeBSD y GNU/Linux</span>
                   </li>
                 </ul>
@@ -629,22 +629,22 @@
       <!-- Commitment section - clean and minimal -->
       <div class="mt-40 text-center">
         <div
-          class="bg-slate-950/30 backdrop-blur-sm rounded-xl p-16 border border-slate-700/5 transition-all duration-300 hover:border-slate-400/10 max-w-4xl mx-auto">
+          class="bg-white dark:bg-slate-950/30 backdrop-blur-sm rounded-xl p-16 border border-slate-300 dark:border-0 hover:border-amber-400 transition-all duration-300 hover:border-slate-400/10 max-w-4xl mx-auto">
           <h3 class="text-3xl md:text-4xl font-light dark:text-slate-100 mb-6 tracking-tight">
             <span
-              class="text-transparent bg-clip-text bg-gradient-to-r from-slate-400 to-slate-500">Nuestro Compromiso:</span>
+              class="text-transparent bg-clip-text bg-gradient-to-r from-amber-400 to-sky-600 dark:from-slate-400 dark:to-slate-500">Nuestro Compromiso:</span>
             Responsabilidad Integral
           </h3>
 
-          <p class="text-white dark:text-slate-300/60 font-light text-xl max-w-3xl mx-auto leading-relaxed mb-16">
+          <p class="text-black dark:text-slate-300/60 font-light text-xl max-w-3xl mx-auto leading-relaxed mb-16">
             Asumimos el desarrollo completo, desde el hardware hasta el software, incluyendo la infraestructura. Esto
             garantiza una solución cohesiva y un único punto de contacto responsable.
           </p>
 
           <a href="#contact" role="button"
-             class="button flex px-12 py-5 bg-slate-500/10 backdrop-blur-sm rounded-full border border-slate-400/20 transition-all duration-300 hover:bg-slate-500/20 hover:border-slate-400/40 items-center justify-center">
-            <span class="text-slate-400 font-light text-sm tracking-wide mr-3">¿TIENE UN DESAFÍO TECNOLÓGICO?</span>
-            <svg class="w-4 h-4 text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"
+             class="button flex px-12 py-5 bg-amber-200 dark:bg-slate-500/10 backdrop-blur-sm rounded-full border border-slate-400/20 transition-all duration-300 dark:hover:bg-slate-500/20 dark:hover:border-slate-400/40 items-center justify-center">
+            <span class="text-base dark:text-slate-400 tracking-wide mr-3">¿TIENE UN DESAFÍO TECNOLÓGICO?</span>
+            <svg class="w-4 h-4 text-black dark:text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"
                  focusable="false">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M17 8l4 4m0 0l-4 4m4-4H3" />
             </svg>
@@ -676,7 +676,7 @@
       <div class="grid md:grid-cols-2 gap-16 max-w-5xl mx-auto">
         <!-- Formulario de contacto - clean and minimal -->
         <div
-          class="bg-slate-800/30 backdrop-blur-sm rounded-xl p-12 border border-slate-700/5 transition-all duration-700 hover:border-slate-400/10 hover:shadow-xl hover:shadow-slate-950">
+          class="bg-dark:bg-slate-800/30 backdrop-blur-sm rounded-xl p-12 border border-slate-700/5 transition-all duration-700 hover:border-slate-400/10 hover:shadow-xl hover:shadow-slate-950">
           <h3 class="text-2xl md:text-3xl font-light text-white mb-10 tracking-tight">
             Contacte con nosotros
           </h3>
